--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="form-group">
+    <%= form.label :description %><br>
+    <%= form.text_area :description, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
     <%= form.label :url %><br>
     <%= form.text_field :url, class: "form-control" %>
   </div>
