--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,10 +1,19 @@
 <div class="page-header">
-	<h1><a href="<%= @link.url %>"><%= @link.title %></a><br> <small>Submitted by <%= @link.user.name %></small></h1>
+	<h2>
+		<% if @link.url.present? %>
+			<a href="<%= @link.url %>"><%= @link.title %></a>
+		<% else %>
+			<%= @link.title %>
+		<% end %>
+	<br>
+	<small>Submitted by <%= @link.user.name %></small></h2>
 </div>
 
-<div class="btn-group">
-	<%= link_to 'Visit URL', @link.url, class: "btn btn-primary" %>
-</div>
+<% if @link.description.present? %>
+	<div class="lead">
+		<%= @markdown.render(@link.description).html_safe %>
+	</div>
+<% end %>
 
 <% if @link.user == current_user %>
 	<div class="btn-group">
@@ -27,7 +36,7 @@
 </div>
 
 <h3 class="comments_title">
-	<%= @link.comments.count %> comments
+	<%= @link.comments.count %> <%= "comment".pluralize(@link.comments.count) %>
 </h3>
 
 <div id="comments">
