--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,7 +9,7 @@
       <div class="form-inputs">
 
       <div class="form-group">
-        <%= f.label :name %>
+        <%= f.label :name, "Username" %>
         <%= f.text_field :name, class: "form-control", :autofocus => true %>
       </div>
 
