Only show link if present

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -7,7 +7,9 @@
 
 
   		<div class="btn-group">
-  				<a class="btn btn-default btn-sm" href="<%= link.url %>">Visit Link</a>
+					<% if link.url.present? %>
+						<a class="btn btn-default btn-sm" href="<%= link.url %>">Visit Link</a>
+					<% end %>
   				<%= link_to like_link_path(link), method: :put, class: "btn btn-default btn-sm" do %>
   				<span class="glyphicon glyphicon-chevron-up"></span>
   				Upvote
